--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,10 +1,8 @@
 /* sidebar */
 .sidebar {
     width: 15%;
-    /* background-color: #4b525c; */
     display: flex; 
-    height: 100%;
-     
+    height: 100%; 
 }
 .ikonice{
     margin: 0 15% 0 3%;
@@ -73,7 +71,6 @@ ul{
     background-size: 100%;
     background-repeat: no-repeat;
 }
-
 @media screen and (max-width: 1280px){
     .ikonica{
         display: none;
@@ -115,8 +112,13 @@ ul{
     .ram{
         width: 100%;
     }
-    .slika_logoa{
-        width:50px;
+    ul{
+        margin-bottom: 1%;
     }
-
+    .link{
+        text-align: center;
+    }
+    .navigacija h3{
+        margin:auto;
+    }
 }
